# spotify-history

./: .gitignore  README.md  customizations.sh  docker-compose.yml  dockerfile  pyproject.toml
Script_sql/: .project  Readme.sql  espedito_script.sql  espedito_script_analise.sql  espedito_script_contagens.sql  jana_script.sql  verifica.sql
Script_sql/.dbeaver/: .project-metadata.json.bak  project-metadata.json
data/Spotify_history/: Streaming_History_Audio_2024_4.json  Streaming_History_Video_2020-2024.json
notebooks/00_db_tabelas/: 01_Tabela_principal.ipynb  02_Tabelas_apoio.ipynb  03_Connect_API_Banco_esp.ipynb  03_Connect_APT_Banco_jana.ipynb
notebooks/01_exploration/: 01_EDA_Spotify_User_1.ipynb
notebooks/0_db_tabelas/: 01_Tabela_principal.ipynb  02_Tabelas_apoio.ipynb  03_Connect_API_Banco_esp.ipynb
notebooks/db_tabelas/: 01_db_tabela_1.ipynb  02_db_tabelas_2.ipynb  03_Insert_spotify_data.ipynb  03_Insert_spotify_data_esp.ipynb  03_Insert_spotify_data_jana.ipynb  Spotify_testes.ipynb
notebooks/db_tabelas_testes/: 01_db_tabela_1.ipynb  02_db_tabelas_2.ipynb  03_spotify_testes.ipynb
notebooks/exploration/: 01_.ipynb  01_EDA_Spotify_User_1.ipynb
notebooks/preprocessing/: Insert_spotify_data.ipynb
output/: Meu_tema_spotify 2.json  Meu_tema_spotify.json
src/: conect_sql.py  db_table_artistcs.py  db_table_spotify_history.py  db_table_track.py  spotify_data.py
tests/: testes.ipynb
